* Sat Jul 2 2011 Thunor <thunorsif@hotmail.com>
- Added a 2.20.0 GTK+ version check for gtk_widget_get_realized and on
  false will use the deprecated GTK_WIDGET_REALIZED macro.
- Added code to widget_signal_executor to automate managing the default
  signal for widget types.
- Added comboboxtext default signal support for action and action type
  directives.

* Fri Jul 1 2011 Thunor <thunorsif@hotmail.com>
- New widget: <comboboxtext></comboboxtext>, full action function set.

* Thu Jun 30 2011 Thunor <thunorsif@hotmail.com>
- Fixed three bugs in glade_support.c that were checking that command
  wasn't NULL when they should've been checking full_command instead
  (likely an initial mistake and then copied and pasted).
  
* Sat Jun 25 2011 Thunor <thunorsif@hotmail.com>
- Added width and height tag attribute support for the scrollable hbox
  and vbox to control the viewport dimensions.
- "selection_mode" will now accept 3, 2, 1, or 0 as well as multiple,
  browse, single and none. This makes it consistent with the existing
  selection-mode GtkCList (<table>) property.
- New widget: <hseparator tagattr></hseparator>.
- New widget: <vseparator tagattr></vseparator>.
  
* Fri Jun 24 2011 Thunor <thunorsif@hotmail.com>
- Added hbox and vbox widget scrolling capability via the "scrollable"
  custom attribute. If scrollable="true/yes/1" then the box is placed
  inside a GtkScrolledWindow by the existing put_in_the_scrolled_window
  function.

* Thu Jun 23 2011 Thunor <thunorsif@hotmail.com>
- Simplified the search for the "selection_mode" custom attribute in
  create_tree as I found a function that finds them and returns their
  values. Also, since there exists a GTK "selection-mode" property for
  other unrelated widgets I don't now distinguish between a "_" and "-".

* Tue Jun 21 2011 Thunor <thunorsif@hotmail.com>
- Function remove_selected_variable has been updated to accommodate the
  extended range of tree widget selection modes.
